# xterm-util

./: setup.cfg  setup.py
src/xterm_util_Marcelo_Perseus.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
