[metadata]
name = xterm-util-Marcelo-Perseus
version = 0.0.1
author = Marcelo Luciano
author_email = Marcelo.Perseus@gmail.com
description = A package for customizing xterm more
long_description = file: README.md
long_description_content_type = text/markdown
url =
project_urls =
  Bug Tracker =
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: POSIX :: Linux

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
